sign up button removed from index if user is logged in, added link to property in profile review section

--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,14 @@ body {
     margin-top: auto;
   }
 
-.footer a:hover, .footer i:hover{
+footer a{
+color: black;
+}
+
+a{
   color: rgb(223, 167, 60)
+}
+
+a:hover, i:hover{
+  color: rgb(187, 137, 43)
 }
