--- a/public/style.css
+++ b/public/style.css
@@ -3031,20 +3031,6 @@ html {
   font-size: 0.75rem;
 }
 
-.file-input-sm {
-  height: 2rem;
-  padding-right: 0.75rem;
-  font-size: 0.875rem;
-  line-height: 2rem;
-}
-
-.file-input-sm::file-selector-button {
-  margin-right: 0.75rem;
-  height: 1.875rem;
-  min-height: 1.875rem;
-  font-size: 0.875rem;
-}
-
 .menu-horizontal {
   display: inline-flex;
   width: -moz-max-content;
@@ -3282,6 +3268,10 @@ html {
   display: none;
 }
 
+.w-full {
+  width: 100%;
+}
+
 .w-24 {
   width: 6rem;
 }
@@ -3294,10 +3284,6 @@ html {
   width: 24rem;
 }
 
-.w-full {
-  width: 100%;
-}
-
 .w-10 {
   width: 2.5rem;
 }
@@ -3306,12 +3292,12 @@ html {
   width: 13rem;
 }
 
-.max-w-xs {
-  max-width: 20rem;
-}
-
 .max-w-lg {
   max-width: 32rem;
+}
+
+.max-w-xs {
+  max-width: 20rem;
 }
 
 .flex-1 {
@@ -3334,16 +3320,8 @@ html {
   flex-wrap: wrap;
 }
 
-.content-center {
-  align-content: center;
-}
-
 .justify-end {
   justify-content: flex-end;
-}
-
-.justify-center {
-  justify-content: center;
 }
 
 .justify-evenly {
@@ -3372,11 +3350,6 @@ html {
 
 .border-2 {
   border-width: 2px;
-}
-
-.border-amber-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(217 119 6 / var(--tw-border-opacity));
 }
 
 .border-primary-focus {
@@ -3551,8 +3524,16 @@ body {
   margin-top: auto;
 }
 
-.footer a:hover, .footer i:hover{
+footer a{
+  color: black;
+}
+
+a{
   color: rgb(223, 167, 60)
+}
+
+a:hover, i:hover{
+  color: rgb(187, 137, 43)
 }
 
 @media (min-width: 640px) {
