--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -18,10 +18,10 @@
       <li><span class="text-2xl font-bold underline underline-offset-4 pb-2">Your reviews</span></li>
       <% for(var i=0; i<review.length; i++) {%>
         <!-- outer review div-->
-        <div class="border-2 border-amber-600 px-8 py-4 my-4">
+        <div class="border-2 border-primary-focus px-8 py-4 my-4">
             <!-- address and tenancy dates-->
             <div class="pb-2"> 
-              <h3 class="text-l font-bold pb-2">Review for <%= review[i].streetName%>, <%= review[i].postcode%></h3>
+              <h3 class="text-l font-bold pb-2">Review for <a href="/property/<%= review[i].propertyId%>"><%= review[i].streetName%>, <%= review[i].postcode%></a></h3>
                 <% if(review[i].tenancyFrom && review[i].tenancyTo != "") {%>
                   <p>Tenancy from <%= review[i].tenancyFrom%> to <%= review[i].tenancyTo%></p>
                 <% } %>
