--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -2,16 +2,17 @@
   <main class="container pb-5">
         <div class="row justify-content-center">
             <section class="col-10 md:col-6 mt-5">
-                <form class="w-full max-w-lg mx-auto md:grid md:grid-cols-2 gap-4" action="/edit/editProfile" enctype="multipart/form-data" method="POST">
-                  <!-- col-1 -->
-                  <div class="col-span-2 justify-self-center">
+                <form class="w-full max-w-lg mx-auto gap-4 justify-content-center" action="/edit/editProfile" enctype="multipart/form-data" method="POST">
+                <h1 class="text-2xl font-bold pb-2">Edit your profile</h1>
+                  <!-- change profile photo -->
+                  <div class="col-span-2">
                   <div class="mb-3">
                     <img src="<%= user.profilePhoto %>" alt="" class="pb-2 w-24">
                     <label for="imgUpload" class="form-label">Change your profile photo</label><br>
                     <input type="file" class="file-input file-input-bordered file-input-xs md:w-5/6 max-w-xs" id="imageUpload" name="file"><br>
                   </div>
                   </div>
-                <!-- col 2 -->
+                <!-- username and email -->
                 <div>
                   <div class="mb-3">
                         <label for="userName" class="form-label">User Name</label>
@@ -23,7 +24,7 @@
                     </div>
                   </div>
                   <!-- col 3 -->
-                  <div>
+                  <!-- <div>
                     <div class="mb-3">
                       <label for="password" class="form-label">Password</label>
                       <input type="password" class="form-control" id="password" name="password">
@@ -32,9 +33,9 @@
                         <label for="confirmPassword" class="form-label">Confirm Password</label>
                         <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
                       </div>
-                    </div>
+                    </div> -->
                     <!-- col 4 -->
-                    <div>
+                    <div class="mb-3 col-span-2 justify-self-center">
                     <button type="submit" class="btn btn-primary">Submit</button>
                   </div>
                   </form>
