--- a/public/style.css
+++ b/public/style.css
@@ -3180,6 +3180,18 @@ html {
   grid-column: span 2 / span 2;
 }
 
+.col-start-2 {
+  grid-column-start: 2;
+}
+
+.col-start-1 {
+  grid-column-start: 1;
+}
+
+.row-start-1 {
+  grid-row-start: 1;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -3252,6 +3264,10 @@ html {
   margin-top: 0.75rem;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .block {
   display: block;
 }
@@ -3276,10 +3292,6 @@ html {
   width: 6rem;
 }
 
-.w-5\/6 {
-  width: 83.333333%;
-}
-
 .w-96 {
   width: 24rem;
 }
@@ -3300,12 +3312,24 @@ html {
   max-width: 20rem;
 }
 
+.max-w-md {
+  max-width: 28rem;
+}
+
 .flex-1 {
   flex: 1 1 0%;
 }
 
 .flex-none {
   flex: none;
+}
+
+.grid-flow-row {
+  grid-auto-flow: row;
+}
+
+.grid-flow-col {
+  grid-auto-flow: column;
 }
 
 .grid-cols-2 {
@@ -3439,14 +3463,14 @@ html {
   text-align: center;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-xl {
@@ -3537,6 +3561,10 @@ a:hover, i:hover{
 }
 
 @media (min-width: 640px) {
+  .sm\:col-start-1 {
+    grid-column-start: 1;
+  }
+
   .sm\:mx-4 {
     margin-left: 1rem;
     margin-right: 1rem;
@@ -3556,6 +3584,10 @@ a:hover, i:hover{
 }
 
 @media (min-width: 768px) {
+  .md\:col-start-1 {
+    grid-column-start: 1;
+  }
+
   .md\:mx-auto {
     margin-left: auto;
     margin-right: auto;
@@ -3570,8 +3602,8 @@ a:hover, i:hover{
     margin-bottom: 0px;
   }
 
-  .md\:grid {
-    display: grid;
+  .md\:w-5\/6 {
+    width: 83.333333%;
   }
 
   .md\:w-2\/3 {
@@ -3586,10 +3618,6 @@ a:hover, i:hover{
     width: 50%;
   }
 
-  .md\:w-5\/6 {
-    width: 83.333333%;
-  }
-
   .md\:max-w-xl {
     max-width: 36rem;
   }
@@ -3601,10 +3629,6 @@ a:hover, i:hover{
   .md\:grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
-
-  .md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
 }
 
 @media (min-width: 1024px) {
@@ -3614,6 +3638,14 @@ a:hover, i:hover{
 
   .lg\:col-span-2 {
     grid-column: span 2 / span 2;
+  }
+
+  .lg\:col-start-1 {
+    grid-column-start: 1;
+  }
+
+  .lg\:col-start-2 {
+    grid-column-start: 2;
   }
 
   .lg\:block {
