--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,12 @@
 
 <div class="container mx-auto px-4 py-5">
   <div class="lg:grid grid-cols-2 gap-4">
-  <div class="text-center mx-auto">
+    <!-- col 1 -->
+    <div class="lg:col-start-2 row-start-1 mb-4">
+    <img src="/images/young_people.jpg" alt="" class="my-2 mx-auto lg:max-w-full md:max-w-md">
+  </div>
+<!-- col 2 -->
+  <div class="text-center mx-auto col-start-1 row-start-1">
     <div class="lg:max-w-md md:max-w-xl md:mx-auto">
       <h3 class="text-3xl font-bold">Rate Your Rental: The Ultimate Review Platform for Renters</h3>
       <p class="py-3">Take control of your rental experience. Share honest assessments of your property and landlord with a community of like-minded renters. Help others make informed decisions and make your voice heard. Sign up now and elevate your rental journey!</p>
@@ -12,9 +17,7 @@
       <p class="<% if(user == undefined){ %>pt-3<% } %>">Our mission is to empower renters in the UK to make informed decisions and elevate their rental experience. We aim to provide a platform where renters can openly and honestly share their experiences with properties and landlords, while fostering a supportive community of like-minded individuals. Through our platform, we strive to promote transparency and accountability in the rental industry, ultimately benefiting all renters in the UK.</p>
     </div>
   </div>
-  <div>
-    <img src="/images/young_people.jpg" alt="" class="my-2 mx-auto lg:max-w-full md:max-w-md">
-  </div>
+
   </div>
 </div>
 
