--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,15 @@
 <%- include('partials/header') -%>
 
-<div class="container mx-auto px-4 py-5">
+<div class="container mx-auto px-4 py-4">
   <div class="lg:grid grid-cols-2 gap-4">
     <!-- col 1 -->
-    <div class="lg:col-start-2 row-start-1 mb-4">
-    <img src="/images/young_people.jpg" alt="" class="my-2 mx-auto lg:max-w-full md:max-w-md">
+    <div class="lg:col-start-2 row-start-1 mb-4 mx-auto lg:max-w-full md:max-w-md max-w-sm">
+    <img src="/images/young_people.jpg" alt="" class="my-2 mx-auto">
   </div>
 <!-- col 2 -->
   <div class="text-center mx-auto col-start-1 row-start-1">
     <div class="lg:max-w-md md:max-w-xl md:mx-auto">
-      <h3 class="text-3xl font-bold">Rate Your Rental: The Ultimate Review Platform for Renters</h3>
+      <h3 class="text-2xl md:text-3xl font-bold">Rate Your Rental: The Ultimate Review Platform for Renters</h3>
       <p class="py-3">Take control of your rental experience. Share honest assessments of your property and landlord with a community of like-minded renters. Help others make informed decisions and make your voice heard. Sign up now and elevate your rental journey!</p>
       <% if(user == undefined){ %>   
       <a href="/signup"><button class="btn btn-sm btn-primary">Sign up today</button></a>
