navbar formatted to hamburger for mobile and remove nav button

--- a/src/style.css
+++ b/src/style.css
@@ -27,3 +27,11 @@ a{
 a:hover, i:hover{
   color: rgb(187, 137, 43)
 }
+
+.navbar-mobile {
+  display: flex;
+  align-items: center;
+  padding: var(--navbar-padding, 0.5rem);
+  min-height: 3rem;
+  width: 100%;
+}
