background added to sign up page

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -15,12 +15,12 @@
                 <!-- username and email -->
                 <div>
                   <div class="mb-3">
-                        <label for="userName" class="form-label">User Name</label>
-                        <input type="text" class="form-control" id="userName" name="userName"placeholder="<%= user.userName%>">
+                        <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="userName" class="form-label">User Name</label>
+                        <input type="text" class="input input-bordered input-primary w-full" id="userName" name="userName"placeholder="<%= user.userName%>">
                       </div>
                     <div class="mb-3">
-                      <label for="exampleInputEmail1" class="form-label">Email address</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email" placeholder="<%= user.email%>">
+                      <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="exampleInputEmail1" class="form-label">Email address</label>
+                      <input type="email" class="input input-bordered input-primary w-full" id="exampleInputEmail1" aria-describedby="emailHelp" name="email" placeholder="<%= user.email%>">
                     </div>
                   </div>
                   <!-- col 3 -->
