--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,41 +1,49 @@
 <%- include('partials/header') -%>
-
-<main class="container bg-base-200 pb-5">
-  <div class="row justify-content-center">
-    <section class="col-6 mt-5">
-      <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
-      <div class="alert alert-danger"><%= el.msg %></div>
-      <% }) %> <% } %> <% if (locals.messages.info) { %> <%
-      messages.info.forEach( el => { %>
-      <div class="alert alert-info"><%= el.msg %></div>
-      <% }) %> <% } %>
-      <form action="/login" method="POST">
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label"
-            >Email address</label
-          >
-          <input
-            type="email"
-            class="form-control"
-            id="exampleInputEmail1"
-            aria-describedby="emailHelp"
-            name="email"
-          />
+        <div class="hero min-h-screen" style="background-image: url(/images/street.jpg);">
+          <div class="hero-overlay bg-opacity-20"></div>
+            <div class="hero-content flex-col lg:flex-row-reverse">
+              <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-200">
+                <div class="card-body">
+                  <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
+                    <div class="alert alert-danger"><%= el.msg %></div>
+                    <% }) %> <% } %> <% if (locals.messages.info) { %> <%
+                    messages.info.forEach( el => { %>
+                    <div class="alert alert-info"><%= el.msg %></div>
+                    <% }) %> <% } %>
+                    
+                    <form action="/login" method="POST">
+                      <div class="mb-3">
+                        <label for="exampleInputEmail1" class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
+                          >Email address</label
+                        >
+                        <input
+                          type="email"
+                          class="input input-bordered input-primary w-full"
+                          id="exampleInputEmail1"
+                          aria-describedby="emailHelp"
+                          name="email"
+                        />
+                      </div>
+                      <div class="mb-3">
+                        <label for="exampleInputPassword1" class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2">Password</label>
+                        <input
+                          type="password"
+                          class="input input-bordered input-primary w-full"
+                          id="exampleInputPassword1"
+                          name="password"
+                        />
+                      </div>
+                      <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input
-            type="password"
-            class="form-control"
-            id="exampleInputPassword1"
-            name="password"
-          />
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-    </section>
-  </div>
+      </div>
+    </div>
+  </main>
 
-</main>
+
 
 <%- include('partials/footer') -%>
