--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,9 +22,9 @@
   </head>
 
   
-  <body class="bg-base-200">
+  <body class="bg-base-200" >
         <!-- navbar -->
-    <div class="bg-base-300 py-4 px-4 hidden sm:navbar">
+    <div class="navbar bg-base-300  px-4 hidden">
       <div class="flex-1">
         <a class="btn btn-primary normal-case text-xl" href="/">Rate your rental</a>
       </div>
@@ -96,7 +96,7 @@
     </div>
     </div>
 
-         <!-- mobile navbar -->
+<!-- mobile navbar -->
 <div class="navbar-mobile bg-base-300 px-4 sm:hidden">
   <!-- navigation -->
   <div class="dropdown">
