--- a/src/style.css
+++ b/src/style.css
@@ -35,3 +35,11 @@ a:hover, i:hover{
   min-height: 3rem;
   width: 100%;
 }
+
+.navbar {
+  display: flex;
+  align-items: center;
+  padding: var(--navbar-padding, 0.5rem);
+  min-height: 3rem;
+  width: 100%;
+}
