--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,39 +1,47 @@
 <%- include('partials/header') -%>
-    <main class="container pb-5">
-        <div class="row justify-content-center">
-            <section class="col-6 mt-5">
-                <% if (locals.messages.errors) { %>
+      <div class="hero min-h-screen" style="background-image: url(/images/street.jpg);">
+        <div class="hero-overlay bg-opacity-20"></div>
+            <div class="hero-content flex-col lg:flex-row-reverse">
+              <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-200">
+                <div class="card-body">
+                  <% if (locals.messages.errors) { %>
                     <% messages.errors.forEach( el => { %>
-                        <div class="alert alert-danger"><%= el.msg %></div>
+                        <div class="alert-danger"><%= el.msg %></div>
                     <% }) %>    
                 <% } %>
                 <% if (locals.messages.info) { %>
                     <% messages.info.forEach( el => { %>
-                        <div class="alert alert-info"><%= el.msg %></div>
+                        <div class="alert-info"><%= el.msg %></div>
                     <% }) %>    
                 <% } %>
-                <form action="/signup" method="POST">
+                  <form action="/signup" method="POST">
                     <div class="mb-3">
-                        <label for="userName" class="form-label">User Name</label>
-                        <input type="text" class="form-control" id="userName" name="userName">
+                        <label for="userName" class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2">User Name</label>
+                        <input type="text" class="input input-bordered input-primary w-full" id="userName" name="userName">
                       </div>
                     <div class="mb-3">
-                      <label for="exampleInputEmail1" class="form-label">Email address</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email">
+                      <label for="exampleInputEmail1" class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2">Email address</label>
+                      <input type="email" class="input input-bordered input-primary w-full" id="exampleInputEmail1" aria-describedby="emailHelp" name="email">
                       <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                     </div>
                     <div class="mb-3">
-                      <label for="password" class="form-label">Password</label>
-                      <input type="password" class="form-control" id="password" name="password">
+                      <label for="password" class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2">Password</label>
+                      <input type="password" class="input input-bordered input-primary w-full" id="password" name="password">
                     </div>
                     <div class="mb-3">
-                        <label for="confirmPassword" class="form-label">Confirm Password</label>
-                        <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
+                        <label for="confirmPassword" class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2">Confirm Password</label>
+                        <input type="password" class="input input-bordered input-primary w-full" id="confirmPassword" name="confirmPassword">
                       </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                   </form>
-            </section>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-    </main>
+      </div>
+    </div>
+
+
 
 <%- include('partials/footer') -%>
