--- a/src/style.css
+++ b/src/style.css
@@ -43,3 +43,16 @@ a:hover, i:hover{
   min-height: 3rem;
   width: 100%;
 }
+
+/* .min-h-screen {
+  min-height: calc(100vh - 150px);
+} */
+
+.hero-content-review {
+  z-index: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  padding: 1rem;
+}
