--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,8 +10,7 @@
                     messages.info.forEach( el => { %>
                     <div class="alert alert-info"><%= el.msg %></div>
                     <% }) %> <% } %>
-                    
-                    <form action="/login" method="POST">
+                    <form action="/login" method="POST" class="flex flex-col">
                       <div class="mb-3">
                         <label for="exampleInputEmail1" class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
                           >Email address</label
@@ -33,9 +32,10 @@
                           name="password"
                         />
                       </div>
-                      <button type="submit" class="btn btn-primary">Submit</button>
+                      <div>
+                      <button type="submit" class="btn btn-primary w-full">Submit</button>
+                    </div>
                     </form>
-                </div>
               </div>
             </div>
           </div>
