--- a/views/reviews.ejs
+++ b/views/reviews.ejs
@@ -1,7 +1,10 @@
 <%- include('partials/header') -%>
 
-<div class="container mx-auto py-5">
-
+<div class="hero min-h-screen" style="background-image: url(/images/street.jpg);">
+    <div class="hero-overlay bg-opacity-20"></div>
+        <div class="hero-content flex-col lg:flex-row-reverse">
+          <div class="card flex-shrink-0 w-full shadow-2xl bg-base-200 w-max">
+            <div class="card-body">
 <form class="w-full max-w-lg mx-auto" action="/reviews/createReview" enctype="multipart/form-data" method="POST">
   <div class="flex flex-wrap -mx-3 mb-6">
     <!-- street name -->
@@ -64,10 +67,14 @@
   <!-- submit -->
   <div class="flex flex-wrap -mx-3 my-6">
     <div class="w-full px-3">
-    <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
+    <button type="submit" class="btn btn-primary w-full" value="Upload">Submit</button>
   </div>
 </div>
 </form>
+</div>
+</div>
+</div>
+</div>
 </div>
 
 <%- include('partials/footer') -%>
