--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -42,6 +42,7 @@
           <li class="mx-1"><a href="/login">Log in</a></li>
           <% } else{ %> 
           <!-- hide if not logged in -->
+          <li class="mx-1"><a href="/edit">Edit profile</a></li>
           <li class="mx-1"><a href="/logout">Log out</a></li>
           <% } %>
         </ul>
@@ -89,6 +90,7 @@
             <li class="mx-1"><a href="/login">Log in</a></li>
             <% } else{ %> 
             <!-- hide if not logged in -->
+            <li class="mx-1"><a href="/edit">Edit profile</a></li>
             <li class="mx-1"><a href="/logout">Log out</a></li>
             <% } %>
           </ul>
@@ -116,6 +118,7 @@
       <li class="mx-1"><a href="/login">Log in</a></li>
       <% } else{ %> 
       <!-- hide if not logged in -->
+      <li class="mx-1"><a href="/edit">Edit profile</a></li>
       <li class="mx-1"><a href="/logout">Log out</a></li>
       <% } %>
     </ul>
