--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,24 +1,20 @@
 <%- include('partials/header') -%>
-<div class="lg:grid lg:grid-cols-3 gap-2 mt-4 mx-4">
-<div class="lg:col-span-1 sm:grid sm:grid-cols-2 lg:block">
-    <!-- profile image -->
-    <div class="pb-2">
-      <img src="<%= user.profilePhoto %>" alt="" class="pb-2 w-24">
-    </div>
-    <!-- user info -->
-    <div class="pb-4">
-    <p><strong>User Name</strong>: <%= user.userName %></p>
-    <p><strong>Email</strong>: <%= user.email %></p>
-    <a href="/edit"><button class="btn btn-primary mt-2">Edit profile</button></a><br>
-    <a href="/logout" class="col-3 btn btn-primary my-2">Logout</a>
-    </div>
+<div class="lg:grid lg:grid-cols-3 m-4">
+<!-- heading -->
+<div class="col-start-1 col-span-3">
+<span class="text-3xl font-bold underline underline-offset-4 pb-2">Your reviews</span>
 </div>
-<div class="lg:col-span-2 mx-2">
+<% for(var i=0; i<review.length; i++) {%>
+<!-- review image -->
+<div class="lg:col-span-1 sm:grid sm:grid-cols-2 lg:block border-b-2 border-primary-focus">
+      <div class=" p-2 my-4">
+        <img src="<%= review[i].image%>">
+      </div>
+</div>
+<div class="lg:col-span-2 border-b-2 border-primary-focus">
     <ul class="row list-unstyled">
-      <li><span class="text-2xl font-bold underline underline-offset-4 pb-2">Your reviews</span></li>
-      <% for(var i=0; i<review.length; i++) {%>
         <!-- outer review div-->
-        <div class="border-2 border-primary-focus px-8 py-4 my-4">
+        <div class=" px-8 py-4 my-4">
             <!-- address and tenancy dates-->
             <div class="pb-2"> 
               <h3 class="text-l font-bold pb-2">Review for <a href="/property/<%= review[i].propertyId%>"><%= review[i].streetName%>, <%= review[i].postcode%></a></h3>
@@ -32,8 +28,8 @@
               <p class="pt-2"><%= review[i].body%></p>
             </div>
         </div>
-        <% } %>
     </ul>
 </div>
+<% } %>
 </div>
 <%- include('partials/footer') -%>
