--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,7 +8,7 @@
 <!-- review image -->
 <div class="lg:col-span-1 sm:grid sm:grid-cols-2 lg:block border-b-2 border-primary-focus">
       <div class=" p-2 my-4">
-        <img src="<%= review[i].image%>">
+        <a href="/property/<%= review[i].propertyId%>"><img src="<%= review[i].image%>"></a>
       </div>
 </div>
 <div class="lg:col-span-2 border-b-2 border-primary-focus">
