--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -14,13 +14,25 @@
 <div class="lg:col-span-2 border-b-2 border-primary-focus">
     <ul class="row list-unstyled">
         <!-- outer review div-->
-        <div class=" px-8 py-4 my-4">
+        <div class="px-8 py-4 my-4">
             <!-- address and tenancy dates-->
-            <div class="pb-2"> 
-              <h3 class="text-l font-bold pb-2">Review for <a href="/property/<%= review[i].propertyId%>"><%= review[i].streetName%>, <%= review[i].postcode%></a></h3>
-                <% if(review[i].tenancyFrom && review[i].tenancyTo != "") {%>
-                  <p>Tenancy from <%= review[i].tenancyFrom%> to <%= review[i].tenancyTo%></p>
-                <% } %>
+            <div class="grid grid-cols-12">
+              <div class="pb-2 col-span-5"> <!-- posted by and tenancy dates-->
+                <p>Review posted by <%= review[i].user.userName%></p>
+                  <% if(review[i].tenancyFrom && review[i].tenancyTo != "") {%>
+                    <p>Tenancy from <%= review[i].tenancyFrom%> to <%= review[i].tenancyTo%></p>
+                  <% } %>
+                  </div>
+                  <div class="pb-2 col-start-12 justify-self-end"> 
+                  <%if(review[i].user._id == user.id){ %>
+                    <form
+                      action="/profile/deleteReview/<%= review[i]._id %>?_method=DELETE"
+                      method="POST"
+                      class="col-3"
+                    ><button class="btn btn-primary fa fa-trash text-2xl" type="submit"></button>
+                  </form>
+                    <% } %>
+              </div>
             </div>
             <!-- review title and body-->
             <div> 
