--- a/views/feed copy.ejs
+++ b/views/feed copy.ejs
@@ -4,14 +4,12 @@
   <div class="grid xl:grid-cols-3 gap-4 lg:grid-cols-2 md:grid-cols-1 ">
       <% for(var i=0; i<property.length; i++) {%>
     <div class="card w-96 bg-base-100 shadow-xl mx-auto">
-      <figure>
-        
-
-
-      </figure>
+      <figure><img src="/images/stock/bedroom.jpg" alt="Shoes" /></figure>
       <div class="card-body">
-        <h2 class="card-title">Title</h2>
+        <h2 class="card-title"><%= property[i].streetName%>, <%= property[i].postcode.toUpperCase()%></h2>
+        <!-- <p><%= property[i].title%></p> -->
         <div class="card-actions justify-end">
+          <a href="/property/<%= property[i]._id%>"><button class="btn btn-primary">View Property</button></a>
         </div>
       </div>
     </div>
